# Operon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  WebPilot_PRD.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  integration.yml
benchmarks/: webarena_tasks.json
benchmarks/datasets/: mind2web.json  remaining_tasks.json  webarena.json
core/: __init__.py  router.py
core/contracts/: __init__.py  actor.py  critic.py  planner.py
docs/: DESKTOP_MODE_PRD.md  agent_contract.md  architecture.md  claude_task.md  codebase_overview.md  migration_cleanup.md  phase4_migration_note.md  product_requirements.md  upload_paths.md
docs/substack_drafts/: 2026-04-26.md
evaluation/: benchmark_native_upload.py
examples/contracts/: browser_flow.json  browser_state_transition.json  cross_environment_flow.json  desktop_flow.json  desktop_state_transition.json
executors/: browser_executor.py  desktop_executor.py
prompts/: browser_combined_prompt.txt  browser_computer_use_prompt.txt  critic_prompt.txt  desktop_combined_prompt.txt  desktop_perception_prompt.txt  desktop_policy_prompt.txt  perception_prompt.txt  policy_prompt.txt  reaction_check_prompt.txt  video_verification_prompt.txt
runtime/: __init__.py  benchmark_runner.py  legacy_adapter.py  orchestrator.py  state.py
scripts/: billing_monitor.py  poll_suite.py  repair-process-env.ps1  run_observed_task.py
src/: __init__.py  storage.py
src/agent/: __init__.py  action_translation.py  adaptation.py  adk_agent.py  anchor_cache.py  anthropic_policy.py  backend.py  benchmark.py  browser_computer_use.py  browser_json.py  capture.py  (+27 more)
tests/: __init__.py  agent_runner.py  conftest.py  dashboard_server.py  judge_prompt.md  test_action_translation.py  test_adaptation.py  test_agent.py  test_agent_loop.py  test_api.py  test_app_startup.py  test_benchmark.py  test_benchmark_runner.py  test_benchmark_summary.py  test_browser_computer_use_docs_compliance.py  test_browser_computer_use_smoke.py  test_browser_executor.py  test_browser_native.py  test_browser_native_compliance.py  test_browser_native_headless_skips_pid_detect.py  test_browser_stop_guard.py  test_browser_success_guard.py  test_browser_wait_guard.py  test_browserbase_integration.py  test_browserbase_native.py  test_bug_fixes_verification.py  test_clarifier.py  test_combined_replan.py  test_console.py  test_contracts.py  test_dashboard.py  test_desktop_api.py  test_desktop_executor.py  test_desktop_routes.py  test_e2e_quick_tasks.py  test_episode.py  test_failure_taxonomy.py  test_fallback_backend.py  test_file_porter.py  test_file_porter_integration.py  (+37 more)
webpilot-extension/: background.js
(+79 files in other folders)
