[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operon"
version = "0.1.0"
description = "Vision-driven computer-use engine for UI-native automation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pyautogui>=0.9.54,<1.0.0",
    "mss>=9.0.0,<10.0.0",
    "pyperclip>=1.8.0,<2.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "httpx[http2]>=0.27.0,<1.0.0",
    "requests>=2.32.0,<3.0.0",
    "opencv-python-headless>=4.8.0,<5.0.0",
    "numpy>=1.26.0,<3.0.0",
    "playwright>=1.52.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.9.0,<1.0.0",
]
browserbase = [
    "browserbase>=1.0.0,<2.0.0",
]
notifications = [
    "win11toast>=0.36.0",
]
drive = [
    "google-api-python-client>=2.100.0,<3.0.0",
    "google-auth>=2.20.0,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as using asyncio",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
